# get-interviewed

./: .gitignore  README.md  pyproject.toml
interview_app/: manage.py
interview_app/authentication/: admin.py  models.py  renderers.py  serializers.py  urls.py  utils.py  views.py
interview_app/interview_app/: settings.py  urls.py
interview_app/interview_booking/: apps.py  views.py
interview_app/templates/main/: base.html  index.html  login.html
