[tool.poetry]
name = "get-interviewed"
version = "0.1.0"
description = "Interview Application"
authors = ["Himanshu Sagar <sagarhimanshu355@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.1"
requests = "^2.28.1"
numpy = "^1.23.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
