[tool.poetry]
name = "get-interviewed"
version = "0.1.0"
description = "Interview Application"
authors = ["Himanshu Sagar <sagarhimanshu355@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.1"
requests = "^2.28.1"
numpy = "^1.23.3"
whitenoise = "^6.2.0"
pandas = "^1.4.4"
python-dotenv = "^0.21.0"
psycopg2-binary = "^2.9.3"
toml = "^0.10.2"
djangorestframework = "^3.13.1"
Markdown = "^3.3.7"
django-filter = "^21.1"
djangorestframework-simplejwt = "^5.2.0"
django-cors-headers = "^3.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
